# RPI5_API

./: README.md
Dbus testing/: emetting.py  reception.py  test.py
Software/: .gitignore  voltage_data.csv
Software/new_C/PFE_SW_FINAL/: CMakeLists.txt  main.c  pfe.h
Software/new_C/RX/: CMakeLists.txt  main.c
Software/new_C/TX/: CMakeLists.txt  configure_system.h  main_tx.c  messageBuilder.c
Software/new_C/ble-serial-main/ble-venv/: pyvenv.cfg
Software/old_Python/: README.md  constant.py  packageInstaller.py  test_csv_writing.py  test_interface.py  test_send_command.py
Software/old_Python/communicationProtocol/: control.py  messageBuilder.py
Software/old_Python/gestionnaireCSV/: csvHandler.py
Software/old_Python/interfaceGraphique/: constante.py  interfaceGraphique.py  stm32_simulate.py  test_graph.py
